--- a/index.html
+++ b/index.html
@@ -3,13 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>test json</title>
-    <script type="text/javascript" src="/dep/js/main.js"></script>
-    <script type="text/javascript" src="/dep/js/jquery-3.2.1.min.js"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="/assets/css/materialize.css"  media="screen,projection"/>
+    <!--Let browser know website is optimized for mobile-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <script type="text/javascript" src="/assets/js/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="/assets/js/xlsx.full.min.js"></script>
   </head>
   <body>
     <form class="" action="index.html" method="post">
-      <input type="file" id="sheet" accept="xlsx">
-      <input type="submit" value="Submit">
+      <input type="file" id="my_file_input" />
+      <div id='my_file_output'></div>
     </form>
+    <div id='my_file_output'></div>
   </body>
+  <script type="text/javascript" src="/assets/js/main.js"></script>
 </html>
