--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
     <script type="text/javascript" src="/assets/js/xlsx.full.min.js"></script>
   </head>
   <body>
-    <form class="" action="index.html" method="post">
-      <input type="file" id="my_file_input" />
+    <div class="headline">
+      כותרת
+    </div>
+    <form>
+      <input title= " " type="file"  id="my_file_input" accept=".xlsx">
       <div id='my_file_output'></div>
     </form>
     <div id='my_file_output'></div>
